plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
    id 'org.jetbrains.kotlin.android'
}
android {
    namespace 'com.maxvidzgallery.storymaker'
    compileSdkVersion 34

    defaultConfig {
        applicationId "com.maxvidzgallery.storymaker"
        minSdkVersion 21
        versionCode 1
        versionName "1.0"
        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    lintOptions {
        checkReleaseBuilds false
        abortOnError false
    }
    buildFeatures {
        viewBinding true
        buildConfig true
    }
    kotlinOptions {
        jvmTarget = '17'
    }
}

//tasks.withType(JavaCompile).configureEach {
//    options.fork = true
//    options.forkOptions.jvmArgs += [
//            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
//            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
//            '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
//            '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
//            '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
//            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
//            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
//            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
//            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
//            '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
//    ]
//}

dependencies {
    implementation "androidx.appcompat:appcompat:$rootProject.compatVersion"
    implementation "com.google.android.material:material:$rootProject.materialVersion"
    implementation 'androidx.core:core-ktx:1.13.1'
    testImplementation 'junit:junit:4.+'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation "androidx.multidex:multidex:2.0.1"
    implementation 'com.github.GrenderG:Toasty:1.5.2'
    implementation 'jp.co.cyberagent.android:gpuimage:2.0.3'

    implementation 'io.github.h07000223:flycoTabLayout:3.0.0'
    implementation 'com.github.florent37:shapeofview:1.4.7'
    implementation 'com.karumi:dexter:6.2.3'
    implementation 'com.github.yalantis:ucrop:2.2.8'
    implementation 'jp.wasabeef:blurry:4.0.1'
    implementation 'com.github.warkiz.widget:indicatorseekbar:2.1.2'
    implementation 'devlight.io:navigationtabbar:1.2.5'
    implementation 'com.jaredrummler:material-spinner:1.3.1'
    implementation 'com.alibaba:fastjson:1.2.73'
//    implementation 'com.jakewharton:butterknife:10.2.3'
//    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'

    implementation "androidx.preference:preference:1.2.1"
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    implementation 'jp.wasabeef:glide-transformations:4.0.1'
    implementation 'com.google.code.gson:gson:2.10.1'

    implementation 'com.airbnb.android:lottie:6.1.0'
    implementation 'com.android.volley:volley:1.2.1'
    implementation 'com.intuit.sdp:sdp-android:1.1.0'
    implementation "com.google.android.gms:play-services-ads:$rootProject.gmsAds"
}